Fixed Blackberry icon at mobile version, Fixed ringtone title text overflow

--- a/dev/less/_adaptive.less
+++ b/dev/less/_adaptive.less
@@ -1,3 +1,9 @@
+@media (max-width: 991px) {
+    .ringtone-title {
+        padding-right: 85px;
+    }
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
     .block-container .ringtone-menu .ringtone-title {
         margin-top: 20px;
